# paperless-ollama

./: Dockerfile  pyproject.toml  requirements.txt
src/: chroma.py  config.py  functions.py  llm.py  logger.py  main.py  model.py  paperless.py
