[project]
name = "paperless-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]
